--- a/notebooks/00_merge.ipynb
+++ b/notebooks/00_merge.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 1,
    "id": "57f4b6e7",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 2,
    "id": "9ca9e988",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "4                       "
       ]
      },
-     "execution_count": 183,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 3,
    "id": "f02ff7da",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 4,
    "id": "cf0dec10",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "'\\x97'"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 5,
    "id": "324047ed",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "id": "716c6b6d",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
    ],
    "source": [
     "train_columns = check_columns_consistency(RAW_PATH / \"train\")\n",
-    "print(f\"Found {len(result)} unique column structures\\n\")\n",
+    "print(f\"Found {len(train_columns)} unique column structures\\n\")\n",
     "\n",
     "for i, (cols, files) in enumerate(train_columns.items(), 1):\n",
     "    print(f\"[Structure {i}]\")\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 8,
    "id": "05195116",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "003ede2c",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 10,
    "id": "d9851c9e",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 11,
    "id": "ffdf0902",
    "metadata": {},
    "outputs": [
@@ -545,8 +545,8 @@
       " 4   mean_temperature_c           5424 non-null   object\n",
       " 5   maximum_temperature_c        5424 non-null   object\n",
       " 6   minimum_temperature_c        5424 non-null   object\n",
-      " 7   mean_wind_speed_km/h         5394 non-null   object\n",
-      " 8   max_wind_speed_km/h          5395 non-null   object\n",
+      " 7   mean_wind_speed_kmh          5394 non-null   object\n",
+      " 8   max_wind_speed_kmh           5395 non-null   object\n",
       "dtypes: object(9)\n",
       "memory usage: 383.2+ KB\n"
      ]
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 15,
    "id": "360f312f",
    "metadata": {},
    "outputs": [
@@ -587,9 +587,9 @@
       " 4   mean_temperature_c           379428 non-null  object \n",
       " 5   maximum_temperature_c        380303 non-null  object \n",
       " 6   minimum_temperature_c        380263 non-null  object \n",
-      " 7   mean_wind_speed_km/h         379149 non-null  object \n",
-      " 8   max_wind_speed_km/h          379790 non-null  object \n",
-      " 9   lokasi                       416121 non-null  object \n",
+      " 7   mean_wind_speed_kmh          379149 non-null  object \n",
+      " 8   max_wind_speed_kmh           379790 non-null  object \n",
+      " 9   location                     416121 non-null  object \n",
       " 10  daily_rainfall_total_mm      0 non-null       float64\n",
       "dtypes: float64(1), object(10)\n",
       "memory usage: 34.9+ MB\n"
@@ -598,12 +598,13 @@
    ],
    "source": [
     "train = cleaning.merge_all_cities(MERGE_PATH/'train', output_dir=PROCESS_PATH/'train.csv')\n",
+    "train = cleaning.clean_column_names(train)\n",
     "train.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 16,
    "id": "10f1679c",
    "metadata": {},
    "outputs": [
@@ -623,9 +624,9 @@
       " 4   mean_temperature_c           8999 non-null   float64\n",
       " 5   maximum_temperature_c        8976 non-null   float64\n",
       " 6   minimum_temperature_c        8976 non-null   float64\n",
-      " 7   mean_wind_speed_km/h         8033 non-null   float64\n",
-      " 8   max_wind_speed_km/h          8033 non-null   float64\n",
-      " 9   lokasi                       22748 non-null  object \n",
+      " 7   mean_wind_speed_kmh          8033 non-null   float64\n",
+      " 8   max_wind_speed_kmh           8033 non-null   float64\n",
+      " 9   location                     22748 non-null  object \n",
       " 10  daily_rainfall_total_mm      0 non-null      float64\n",
       "dtypes: float64(9), object(2)\n",
       "memory usage: 1.9+ MB\n"
@@ -634,6 +635,7 @@
    ],
    "source": [
     "test = cleaning.merge_all_cities(MERGE_PATH/'test', output_dir=PROCESS_PATH/'test.csv')\n",
+    "test = cleaning.clean_column_names(test)\n",
     "test.info()"
    ]
   }
