Update and delete unnecessary notebooks

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fff0ad68",
    "metadata": {},
    "outputs": [
@@ -59,10 +59,10 @@
     "import re\n",
     "\n",
     "# Source code helper\n",
-    "import src.extractor as extractor\n",
+    "import src.extraction as extraction\n",
     "import src.cleaning as cleaning\n",
     "import src.preprocessing as preprocessing\n",
-    "def r(module=extractor):\n",
+    "def r(module=extraction):\n",
     "    importlib.reload(module)\n",
     "\n",
     "r()\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "767e0ceb",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
     "sample_image=RAW_PATH/'Train/Bukit_Panjang/Plot_Daily_Rainfall_Total_mm_2000.png'\n",
     "image = cv2.imread(str(sample_image))\n",
     "\n",
-    "rainfall = extractor.extract_rainfall_from_plot(\n",
+    "rainfall = extraction.extract_rainfall_from_plot(\n",
     "    image_path=str(sample_image),\n",
     "    total_days=365, debug=True\n",
     ")\n",
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": null,
    "id": "203c9f1d",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
     }
    ],
    "source": [
-    "extractor.process_all_locations(\n",
+    "extraction.process_all_locations(\n",
     "    input_root=RAW_PATH/'Train',\n",
     "    output_dir=PROCESS_PATH/'extract',\n",
     "    verbose=True\n",
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "9057ec5a",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
     }
    ],
    "source": [
-    "train = extractor.build_training_dataset(\n",
+    "train = extraction.build_training_dataset(\n",
     "    features_dir=PROCESS_PATH/\"merge/train/\",\n",
     "    targets_dir=PROCESS_PATH/\"extract\",\n",
     "    output_csv=PROCESS_PATH/\"train.csv\"\n",
